--- a/index.html
+++ b/index.html
@@ -24,14 +24,57 @@
          <img src="images/female/Group 8425.png" alt="">
         </div>
     </section>
-    <section >
-        <h1>About Me</h1>
-         <p>  Lorem ipsum dolor sit amet, consectetur adipiscing 
-            elit. Condimentum diam orci pretium a pharetra, 
-            feugiat cursus. Dictumst risus, sem egestas odio cras 
-            adipiscing vulputate. Nisi, risus in suscipit non. Non 
-            commodo volutpat, pharetra, vel
-    </p>
+    <section class="img">
+        <div class="half-widt-exta">
+            <h3 class="margin">About Me</h3>
+            <p class="margin"> Lorem ipsum dolor sit amet, consectetur adipiscing 
+             elit. Condimentum diam orci pretium a pharetra, 
+             feugiat cursus. Dictumst risus, sem egestas odio cras 
+             adipiscing vulputate. Nisi, risus in suscipit non. Non 
+             commodo volutpat, pharetra, vel.</p>
+             <a class="link-button" target="_blank" href="https://www.foodpanda.com.bd/bn/?r=1">Contact me</a>
+         </div>
     </section>
+    <section>
+        <div class="text-center">
+           <h4 class="text-madil"> My recipies</h4>
+           <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+            Lorem Ipsum has been the industry's standard dummy text ever since the 
+            1500s.</p>
+        </div>
+    </section>
+    <section>
+            <div class="sado">
+                <img class="box" src="images/food/Project Cover.jpg" alt="">
+                
+                <h6 class="big" >Recipie Title</h6>
+                <p class="short">Lorem ipsum dolor sit amet, 
+                    consectetur adipiscing elit. Lacus, 
+                    fermentum amet faucibus sed id nisi 
+                    lectus at.</p>
+            </div>
+            <div class="">
+               <img class="box" src="images/food/Project Cover.png" alt="">
+               <h6 class="big" >Recipie Title</h6>
+                <p class="short">Lorem ipsum dolor sit amet, 
+                    consectetur adipiscing elit. Lacus, 
+                    fermentum amet faucibus sed id nisi 
+                    lectus at.</p>
+            </div>
+            <div class="">
+                <img class="box" src="images/food/Project Cover1.jpg" alt="">
+                <h6 class="big" >Recipie Title</h6>
+                <p class="short">Lorem ipsum dolor sit amet, 
+                    consectetur adipiscing elit. Lacus, 
+                    fermentum amet faucibus sed id nisi 
+                    lectus at.</p>
+            </div>
+    </section>
+  <footer class="coloring">
+     <center>
+        <h2> <span class="rong">FOOD</span> NETWORK</h2>
+        <h3>at healthy to live healthy. Live healthy to live happy.</h3>
+     </center>
+  </footer>
 </body>
 </html>
